--- a/src/scss/burger_menu.scss
+++ b/src/scss/burger_menu.scss
@@ -6,11 +6,12 @@
     display: block;
     margin: 8px 0;
     outline: none;
+    z-index: 2;
   }
   display: none;
   cursor: pointer;
   border: none;
-  background-color: #ffffff;
+  background: transparent;
   & .burger{
   display: block;
     & .burger_top{
