--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -134,3 +134,35 @@
     }
   }
 }
+
+.menu_active{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0, .8);
+  z-index: 1;
+  right: 0;
+  top: 0;
+  display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
