--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -135,16 +135,30 @@
   }
 }
 
-.menu_active{
+.menu-active{
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0, .8);
-  z-index: 1;
   right: 0;
   top: 0;
+  z-index: 1;
   display: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
