--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -85,7 +85,7 @@
         top: 0;
         background-color: rgba(0,0,0, .8);
         display: none;
-        z-index: 1;
+        z-index: 2;
         & .close{
           position: absolute;
           right: 0;
@@ -144,6 +144,20 @@
   top: 0;
   z-index: 1;
   display: none;
+  & ul{
+    @include clear-list;
+    margin-top: 120px;
+    text-align: center;
+    & li{
+      margin: 25px 0;
+      & a{
+        color: #ffffff;
+        text-transform: uppercase;
+        font-size: 18px;
+        display: inline-block;
+      }
+    }
+  }
 }
 
 
