--- a/src/scss/actual-news.scss
+++ b/src/scss/actual-news.scss
@@ -8,6 +8,8 @@
     justify-content: space-between;
     & .readable {
       width: 31.3%;
+      display: flex;
+      flex-direction: column;
       & .headings-title {
 
         @include title;
@@ -18,10 +20,11 @@
         margin-top: 1rem;
         background-color: $grey-medium;
         padding: 0 1.32rem;
+        flex-grow: 1;
         & ul {
           @include clear-list;
           & li {
-            padding: 1.25em 0;
+            padding: 1.22em 0;
             border-bottom: 1px solid $grey-greyish;
             &:last-child {
               border-bottom: none;
@@ -61,10 +64,11 @@
         & ul {
           @include clear-list;
           & li {
-            padding: 1.25em 0;
+            padding: 1.22em 0;
             border-bottom: 1px solid $blue;
             &:last-child {
               border-bottom: none;
+              padding-bottom: 0;
             }
             & a {
               font-size: 0.8125rem;
