--- a/src/scss/top-news.scss
+++ b/src/scss/top-news.scss
@@ -21,6 +21,7 @@
       }
       & a {
         color: $black-medium;
+        transition: all .5s;
         & .top-news__wrapper {
 
           & .top-news__img {
@@ -38,11 +39,12 @@
             font-size: 1.2rem;
             text-transform: uppercase;
             margin-top: 1rem;
+
           }
         }
         &:hover {
           color: $main-blue;
-          transition: .3s;
+          transition: all .5s;
 
         }
       }
