--- a/src/scss/top-news.scss
+++ b/src/scss/top-news.scss
@@ -38,7 +38,7 @@
           & h3 {
             font-size: 1.2rem;
             text-transform: uppercase;
-            margin-top: 1rem;
+           padding: 1rem 0;
 
           }
         }
