--- a/src/scss/polls-humor.scss
+++ b/src/scss/polls-humor.scss
@@ -1,2 +1,18 @@
 @import "partials/params";
 @import "partials/mixins";
+
+#polls-humor{
+
+  .viewport{
+    display: flex;
+    justify-content: space-between;
+    .polls{
+
+
+    }
+    .humor{
+
+
+    }
+  }
+}
