--- a/src/scss/polls-humor.scss
+++ b/src/scss/polls-humor.scss
@@ -7,11 +7,49 @@
     display: flex;
     justify-content: space-between;
     .polls{
+      width: 55%;
+      .headings-title{
+        @include title;
+        border-bottom: 1px solid $blue;
+      }
+
+      &__wrapper{
+        margin-top: 1em;
+        padding: 1rem;
+        background-color: $grey-medium;
+        .polls__title{
+          border-bottom: 1px solid $orange;
+          padding-bottom: 1em;
+
+          font-size: 1em;
+          color: #000000;
+          text-transform: uppercase;
+
+        }
+        .polls__item{
+          padding-top: 1.25rem;
+          .polls__icon{
+            font-size: 0.8125rem;
+            color: $polls-grey;
+            float: left;
+            i{
+
+            }
+          }
+          .polls__link{
+            font-size: 0.8125rem;
+            margin-left: 1.75em;
+            a{
+              color: #000000;
 
 
+            }
+          }
+        }
+      }
     }
     .humor{
-
+      width: 45%;
 
     }
   }
