--- a/src/scss/polls-humor.scss
+++ b/src/scss/polls-humor.scss
@@ -35,7 +35,7 @@
 
             label{
 
-              input{
+              input[type="radio"]{
                 outline: none;
               }
             }
