--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,12 +1,43 @@
 @import "partials/params";
 @import "partials/mixins";
 
-#footer{
+#footer {
   flex: 0 0 auto;
   background-color: $footer-bg;
   margin-top: 1.875rem;
-  & .viewport{
+  padding-top: 50px;
+  & .viewport {
+    display: flex;
+    .social-footer {
+      width: 45%;
+      span {
+      color: $greyish;
+      }
+      .social-icons {
+        padding-top: 30px;
+        a {
+          color: $greyish;
 
+          padding-right: 20px;
+          i {
 
+          }
+        }
+      }
+    }
+    .footer-forbid {
+      display: flex;
+
+    }
+    p {
+      width: 48%;
+      color: $greyish;
+      margin: 0;
+      padding-right: 20px;
+      padding-bottom: 50px;
+      &:last-child {
+        padding-right: 0;
+      }
+    }
   }
 }
