--- a/src/scss/news-feed.scss
+++ b/src/scss/news-feed.scss
@@ -7,7 +7,7 @@
       display: flex;
       justify-content: space-between;
       & .last-news {
-        @include medium-screen{
+        @media only screen and(max-width: 815px) {
           width: 100%;
         }
         width: 65%;
@@ -52,7 +52,7 @@
         }
       }
       & .widgets-top {
-        @include medium-screen{
+        @media only screen and(max-width: 815px) {
           display: none;
         }
         margin-left: 10px;
