--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -15,10 +15,20 @@
       }
       .social-icons {
         padding-top: 30px;
+        @media only screen and(max-width: 834px){
+          display: flex;
+          flex-direction: column;
+
+          padding: 20px 0 0 15px;
+
+        }
         a {
           color: $greyish;
           transition: all .5s ease;
           padding-right: 20px;
+          @media only screen and(max-width: 834px){
+            padding-bottom: 20px;
+          }
           &:hover{
             color: $greyish-brown;
           }
@@ -30,6 +40,9 @@
     }
     .footer-forbid {
       display: flex;
+      @media only screen and(max-width: 834px){
+        flex-direction: column;
+      }
 
     }
     p {
@@ -40,6 +53,9 @@
       padding-bottom: 50px;
       &:last-child {
         padding-right: 0;
+      }
+      @media only screen and(max-width: 834px){
+        width: 100%;
       }
     }
   }
