--- a/src/scss/top-news.scss
+++ b/src/scss/top-news.scss
@@ -10,6 +10,9 @@
       flex-direction: row;
       flex-wrap: wrap;
     }
+    @include small-screen{
+      display: block;
+    }
 
     & .top-news__tile {
       width: 31.3%;
@@ -18,6 +21,9 @@
         &:last-child{
           margin: 1.875rem auto 0 auto;
         }
+      }
+      @include small-screen{
+        width: 100%;
       }
       & a {
         color: $black-medium;
