--- a/src/scss/polls-humor.scss
+++ b/src/scss/polls-humor.scss
@@ -6,7 +6,14 @@
   .viewport {
     display: flex;
     justify-content: space-between;
+    @include medium-screen{
+      display: block;
+    }
     .polls {
+      @include medium-screen{
+        width: 100%;
+        margin-bottom: 25px;
+      }
       width: 54%;
       display: flex;
       flex-direction: column;
@@ -85,6 +92,9 @@
     }
     .humor {
       width: 43.5%;
+      @include medium-screen{
+        width: 100%;
+      }
 
       .headings-title{
         @include title;
