--- a/src/scss/video.scss
+++ b/src/scss/video.scss
@@ -6,11 +6,17 @@
   .viewport {
     display: flex;
     justify-content: space-between;
+    @include small-screen {
+      display: block;
+    }
 
     .video-block1 {
       width: 45%;
       background-color: $dark-blue-grey;
       padding: 1rem 1rem 1.5625rem 1rem;
+      @include small-screen {
+        width: auto;
+      }
 
       .video-block1__wrapper {
         position: relative;
@@ -56,43 +62,52 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
+      @include medium-screen {
+        margin-left: 10px;
+      }
+      @include small-screen {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 20px;
+        display: flex;
+        flex-wrap: wrap;
+      }
       .video-block2__item {
         width: 48%;
 
 
-          color: $black-two;
-          .video-block2__img--wrapper {
-            position: relative;
-            img {
-              display: block;
-              width: 100%;
+        color: $black-two;
+        .video-block2__img--wrapper {
+          position: relative;
+          img {
+            display: block;
+            width: 100%;
 
-            }
-            .overlay {
-              @include overlay-img;
-
-            }
           }
-          .video-block2__date {
-            font-size: 0.625em;
-            padding-top: 1em;
+          .overlay {
+            @include overlay-img;
+
           }
-          .video-block2__title {
+        }
+        .video-block2__date {
+          font-size: 0.625em;
+          padding-top: 1em;
+        }
+        .video-block2__title {
 
+          padding: 1em 0 1.3em 0;
 
-            padding: 1em 0 1.3em 0;
-
-            a{
-              text-transform: uppercase;
-              font-size: 0.75em;
-              font-weight: 700;
-              color: $black-two;
-              transition: all .5s ease;
-              &:hover {
-                color: $main-blue;
-              }
+          a {
+            text-transform: uppercase;
+            font-size: 0.75em;
+            font-weight: 700;
+            color: $black-two;
+            transition: all .5s ease;
+            &:hover {
+              color: $main-blue;
             }
           }
+        }
 
         .video-block2__more {
           font-size: 0.7em;
@@ -119,6 +134,14 @@
       position: absolute;
       right: 0;
       bottom: 0;
+      @include small-screen {
+        margin-bottom: -45px;
+      }
+      @include small-screen{
+        position: inherit;
+        margin-bottom: 0;
+        margin-top: 20px;
+      }
       i {
 
       }
