--- a/src/scss/single.scss
+++ b/src/scss/single.scss
@@ -7,8 +7,14 @@
   display: flex;
   justify-content: space-between;
   padding-top: 2.5rem;
+  @include small-screen{
+    display: block;
+  }
   .block-left{
     width: 65%;
+    @include small-screen{
+      width: auto;
+    }
     h3{
       font-size: 1em;
       text-transform: uppercase;
@@ -108,6 +114,9 @@
   }
   .block-right{
     width: 30%;
+    @include small-screen{
+      width: auto;
+    }
   }
 }
 #more-theme__active{
