--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -8,10 +8,16 @@
 }
 
 .page-block {
-  padding-top: 4.125rem;
+  padding-top: 2.125rem;
   display: flex;
+  @include small-screen {
+    display: block;
+  }
   .block-left {
     width: 65%;
+    @include small-screen {
+      width: auto;
+    }
     h2 {
       overflow: hidden;
       text-align: center;
@@ -38,18 +44,27 @@
       }
     }
     .block-left__item-case {
-      display: flex;
-      justify-content: space-between;
+
       margin-top: 1.5em;
+
       .block-left__item-case1 {
 
         width: 40%;
         position: relative;
+        float: left;
+        margin-right: 20px;
+        @media screen and (max-width: 420px){
+          float: none;
+          width: auto;
+          margin-right: 0;
+          margin-bottom: 15px;
+        }
+
         a {
 
           img {
             width: 100%;
-            height: 100%;
+            height: auto;
             display: block;
 
           }
@@ -58,38 +73,35 @@
           }
         }
       }
-      .block-left__item-case2 {
-        width: 54%;
+      span {
+        font-size: 0.7em;
+        padding: 0 1em;
+        color: $greyish;
+        border-right: 1px solid $greyish;
+        border-left: 1px solid $greyish;
 
-        span {
-          font-size: 0.7em;
-          padding: 0 1em;
-          color: $greyish;
-
-          border-right: 1px solid $greyish;
-          border-left: 1px solid $greyish;
-
-        }
-        .block-left__item-title {
-          font-size: 1em;
-          font-weight: bold;
-          padding: 10px 0 15px 0;
-          transition: all .5s ease;
-          a {
-            color: $black-medium;
-            &:hover {
-              color: $main-blue;
-            }
+      }
+      .block-left__item-title {
+        font-size: 1em;
+        font-weight: bold;
+        padding: 10px 0 15px 0;
+        transition: all .5s ease;
+        overflow: hidden;
+        a {
+          color: $black-medium;
+          &:hover {
+            color: $main-blue;
           }
         }
-        .block-left__item-description {
+      }
+      .block-left__item-description {
 
-          p {
-            margin: 0;
-            padding: 0;
-            font-size: .7rem;
-            color: $black-medium;
-          }
+        p {
+          margin: 0;
+          padding: 0;
+          font-size: .7rem;
+          color: $black-medium;
+          line-height: 1.3;
         }
       }
     }
@@ -130,6 +142,9 @@
           .page-all-news__description {
             font-size: 0.82em;
             color: $greyish-brown;
+            @media only screen and(max-width: 520px) {
+              display: none;
+            }
 
           }
         }
@@ -139,8 +154,14 @@
   .block-right {
 
     width: 30%;
+    @include small-screen {
+      width: auto;
+      margin-top: 20px;
+    }
   }
 }
+
+
 
 
 
