--- a/src/scss/news-feed.scss
+++ b/src/scss/news-feed.scss
@@ -34,6 +34,9 @@
             font-size: 0.8125rem;
             text-transform: uppercase;
             margin-left: 4.7em;
+            @include medium-screen{
+              margin-left: 3.2em;
+            }
 
             & a {
               color: $black-medium;
