--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -86,6 +86,7 @@
         background-color: rgba(0,0,0, .8);
         display: none;
         z-index: 2;
+
         & .close{
           position: absolute;
           right: 0;
@@ -100,9 +101,13 @@
           @include medium-screen{
             margin-top: 20%;
           }
-
+          @media only screen and(max-width: 440px){
+            margin-top: 30%;
+          }
           form{
-
+            @include small-screen{
+              margin: 0 10px;
+            }
             & input{
               width: 60%;
               height: 41.5px;
@@ -115,10 +120,17 @@
                 height: 38.5px;
                 width: 78%;
               }
+              @media only screen and(max-width: 440px){
+                width: 100%;
+              }
             }
             & button{
               @include medium-screen{
                 line-height: 38px;
+              }
+              @media only screen and(max-width: 440px){
+                margin-right: 0;
+                margin-top: 10px;
               }
               border: none;
               background: $main-blue;
