--- a/src/scss/burger_menu.scss
+++ b/src/scss/burger_menu.scss
@@ -18,7 +18,7 @@
     & .burger_top{
       width: 40px;
       height: 5px;
-      background: $greyish-brown;
+      background: $greyish;
       border: none;
       border-radius: 4px 4px 4px 4px;
       display: block;
@@ -29,7 +29,7 @@
       width: 40px;
       height: 5px;
       margin-top: 4px;
-      background: $greyish-brown;
+      background: $greyish;
       border-radius: 4px 4px 4px 4px;
       display: block;
       transition: all .2s;
@@ -41,7 +41,7 @@
       width: 40px;
       height: 5px;
       margin-top: 4px;
-      background: $greyish-brown;
+      background: $greyish;
       display: block;
       border-radius: 4px 4px 4px 4px;
     }
