--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -39,7 +39,9 @@
 
       padding-top: 150px;
       text-align: center;
-
+      @include small-screen{
+        padding-top: 115px;
+      }
       span {
         font-size: 21px;
         color: $greyish;
