--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -10,6 +10,7 @@
   & .viewport {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     flex-wrap: wrap;
     @include small-screen {
       display: block;
